plugins {
    id 'idea'
    id 'nebula.release' version '15.3.0'
    id 'org.springframework.boot' version '2.4.0-M4' apply false
    id 'io.spring.dependency-management' version '1.0.10.RELEASE' apply false
}

group = 'dev.tomek'

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = 15
    tasks.withType(JavaCompile).each {
        it.options.compilerArgs.add('--enable-preview')
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-webflux'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation project(':common')

        implementation 'org.apache.pulsar:pulsar-client:2.6.1'
        implementation 'io.nats:jnats:2.8.0'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
    }

    test {
        useJUnitPlatform()
    }
}
